web/src/components/Header/Header.module.css
.header {
  height: 60px;
  font-size: 1.1rem;
  font-weight: 500;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #fff;
  will-change: height;
  -webkit-transition: height 0.6s cubic-bezier(0.4, 0, 0.2, 1);
  -o-transition: height 0.6s cubic-bezier(0.4, 0, 0.2, 1);
  transition: height 0.6s cubic-bezier(0.4, 0, 0.2, 1);
}

.header.scroll {
  height: 60px;
}

@media (min-width: 576px) {
  .header {
    height: 90px;
  }
}

.header__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.header__logo {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  text-decoration: none;
  color: inherit;
}

.header__logo img {
  width: 32px;
  margin-right: 16px;
}

.header__logo span {
  margin-bottom: -2px;
}

.header__nav {
  display: inline-flex;
  margin-left: auto;
  margin-bottom: -3px;
  color: #8c8c8c;
}

.header__nav li + li {
  margin-left: 20px;
}

.header__email {
  font-size: 0;
  margin-left: 32px;
}

